deployment/deploy.yaml
# Management Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-management-service
  namespace: unicorn-usageq-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      application: usage-management-service
  template:
    metadata:
      labels:
        application: usage-management-service
    spec:
      containers:
        - name: usage-management-service
          image: unicorncr.azurecr.io/telecom/usage-management-service:20241229190724
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: usage-management-service
  namespace: unicorn-usageq-ns
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    application: usage-management-service
---
# Query Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-query-service
  namespace: unicorn-usageq-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      application: usage-query-service
  template:
    metadata:
      labels:
        application: usage-query-service
    spec:
      containers:
        - name: usage-query-service
          image: unicorncr.azurecr.io/telecom/usage-query-service:20241229190724
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: usage-query-service
  namespace: unicorn-usageq-ns
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8081
  selector:
    application: usage-query-service
---
# Update Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-update-service
  namespace: unicorn-usageq-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      application: usage-update-service
  template:
    metadata:
      labels:
        application: usage-update-service
    spec:
      containers:
        - name: usage-update-service
          image: unicorncr.azurecr.io/telecom/usage-update-service:20241229190724
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: usage-update-service
  namespace: unicorn-usageq-ns
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8082
  selector:
    application: usage-update-service
