deployment/manifest.yaml
# Management Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usage-management-service
  template:
    metadata:
      labels:
        app: usage-management-service
    spec:
      containers:
      - name: usage-management-service
        image: unicorncr.azurecr.io/telecom/usage-management-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: usage-management-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: usage-management-service
---
# Query Service
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: usage-query-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usage-query-service
  template:
    metadata:
      labels:
        app: usage-query-service
    spec:
      containers:
      - name: usage-query-service
        image: unicorncr.azurecr.io/telecom/usage-query-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: usage-query-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: usage-query-service
---
# Update Service  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-update-service
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: usage-update-service
  template:
    metadata:
      labels:
        app: usage-update-service
    spec:
      containers:
      - name: usage-update-service
        image: unicorncr.azurecr.io/telecom/usage-update-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: usage-update-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8082
  selector:
    app: usage-update-service
